# t81lib

./: .clang-format  .clang-tidy  .gitignore  AGENTS.md  ARCHITECTURE.md  BENCHMARKS.md  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  Doxyfile  LICENSE  MANIFEST.in  README.md  a.out  build-python.sh  mkdocs.yml  pyproject.toml  run-tests.sh  setup.py  temp-gguf-float.gguf  temp-gguf.gguf  vcpkg.json
.cache/fontconfig/: fe44ad603488fb7acf454c76fab8a727-le64.cache-9
.cache/mpl/: fontlist-v390.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  performance.yml  release.yml  wheels.yml
bench/: CMakeLists.txt  addc_chain.cpp  addition.cpp  ascii_plot.hpp  bench_bigint_montgomery.cpp  bench_limb_add.cpp  bench_limb_ops.cpp  bench_numeric_types.cpp  bench_t81.cpp  bench_utils.hpp  binary_gods.cpp  compare.cpp  conversion.cpp  division.cpp  gmp_comparison.cpp  main.cpp  multi_limb.cpp  multi_limb_large.cpp  multiplication.cpp  negation.cpp  number_theory.cpp  pow_mod.cpp  shift.cpp  square.cpp  subtraction.cpp
bench/competitors/: boost_multiprecision.cpp  gmp.cpp  naive_ternary.cpp  ttmath.cpp
cmake/: t81lib-config.cmake.in  t81lib.pc.in  t81libConfig.cmake.in
doc/: api.md  cookbook.md  design.md  formatting.md  overview.md  qa.md  t81lib-spec-v0.1.0.md
doc/design/: bigint-design.md  limb-design.md  montgomery-design.md
doc/diagrams/: architecture-stack-mermaid.md  build-flow-mermaid.md  kogge-stone-mermaid.md
docs/: ROADMAP.md  api-overview.md  gpu.md  hardware.md  index.md  python-api.md  python-cookbook.md  python-install.md  quantization-hardening.md  t81lib-spec-v0.1.0.md  torch.md  troubleshooting.md  use-cases.md
docs/design/: bigint-design.md  limb-design.md  montgomery-design.md
docs/diagrams/: architecture-stack-mermaid.md  benchmarks.mermaid.md  build-flow-mermaid.md  cli-workflows-mermaid.md  core-architecture.mermaid.md  docs-sitemap.mermaid.md  gpu-dispatch.mermaid.md  hardware-kernels.mermaid.md  kogge-stone-mermaid.md  quantization-workflow.mermaid.md
docs/html/: _t81_limb_8hpp.html  _t81_limb_8hpp.js  _t81_limb_8hpp_source.html  annotated.html  annotated_dup.js  api_8md.html  cell_8hpp.html  cell_8hpp.js  cell_8hpp_source.html  classes.html  classt81_1_1core_1_1_cell-members.html  classt81_1_1core_1_1_cell.html  classt81_1_1core_1_1_cell.js  classt81_1_1core_1_1_t81_limb-members.html  classt81_1_1core_1_1_t81_limb.html  classt81_1_1core_1_1_t81_limb.js  classt81_1_1core_1_1_t81_limb27-members.html  classt81_1_1core_1_1_t81_limb27.html  classt81_1_1core_1_1_t81_limb27.js  classt81_1_1core_1_1_t81_limb54-members.html  classt81_1_1core_1_1_t81_limb54.html  classt81_1_1core_1_1_t81_limb54.js  cookbook_8md.html  design_8md.html  dir_0822dbb71087c307ad28cc86e39c5cfb.html  dir_0822dbb71087c307ad28cc86e39c5cfb.js  dir_42c3154bb4bf8958c6a3486fb592f5b1.html  dir_42c3154bb4bf8958c6a3486fb592f5b1.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  dir_e68e8157741866f444e17edd764ebbae.html  doxygen_crawl.html  files.html  formatting_8md.html  functions.html  functions_func.html  functions_rela.html  functions_vars.html  index.html  md_doc_2api.html  (+33 more)
docs/references/: README.md  cli-usage.md  gguf-constants.md  gguf-quants-tq.md  gguf-spec-v3.md  gguf.md  hardware-emulation.md  serialization.md
examples/: CMakeLists.txt  README.md  cli-examples.md  demo_llama_conversion.py  example_basic.cpp  example_montgomery.cpp  example_phi.cpp  quantization_config_report.py  scaling_laws_ternary.py  ternary_hardware_sim_demo.ipynb  ternary_mnist_demo.ipynb  ternary_phi3_ptq_qat_demo.ipynb  ternary_qat_inference_comparison.py  ternary_quantization_demo.ipynb  ternary_sparse_preview.py  ternary_transformer_demo.ipynb
examples/basic/: CMakeLists.txt  main.cpp
include/t81/: gf2m.hpp  packing.hpp  t81lib.hpp  t81lib_config.hpp.in  tensor_metadata.hpp
include/t81/core/: T81Limb.hpp  avx512_kogge.hpp  bigint.hpp  bigint_bitops_helpers.hpp  cell.hpp  limb.hpp  montgomery.hpp  montgomery_helpers.hpp  traits.hpp
include/t81/core/detail/: addition.hpp  base_digits.hpp  lut.hpp  simd.hpp  simd_impl.hpp
include/t81/io/: fast_decimal.hpp  format.hpp  parse.hpp
include/t81/linalg/: gemm.hpp  gemm_gpu.hpp  pack_gpu.hpp
include/t81/sparse/: simple.hpp
include/t81/util/: debug.hpp  random.hpp
phi3-t81/: config.json  generation_config.json  model.safetensors.index.json  t81_metadata.json
python/: CMakeLists.txt  bindings.cpp  t81lib_module.cpp
python/t81/: __init__.py  nn.py
scripts/: convert_to_ternary.py  gguf_benchmark.py  gguf_compare.py  gguf_size_audit.py  phi3_ptq_qat_benchmark.py  quantize_energy_benchmark.py  quantize_measure.py  ternary_quantization_benchmark.py  validate_quantization_hardening.sh  vit_ptq_qat_benchmark.py
src/: bigint.cpp  io.cpp  limb.cpp
src/linalg/: gemm_cpu.cpp  gemm_cuda.cu  gemm_dispatch.cpp  gemm_kernel.metal  gemm_metal.mm  gemm_rocm.cpp  pack_kernel.metal  pack_metal.mm
src/t81/core/: gguf_quants.cpp  gguf_quants.h
t81/: __init__.py  cli.py  cli_progress.py  cli_validator.py  convert.py  gguf.py  hardware.py  qat.py  trainer.py
t81/nn/: __init__.py  linear.py
t81/scripts/: __init__.py  t81_dequant.py  t81_gguf.py  t81_qat.py
t81/torch/: __init__.py
tests/: CMakeLists.txt  __init__.py  basic.cpp  fuzz.cpp  test_cli_flags.py  unit_tests.cpp
tests/core/: T81Limb_test.cpp
tests/python/: __init__.py  _models.py  test_bindings.py  test_gguf.py  test_gpu_ops.py  test_llama_integration.py  test_torch_ternary.py
tests/unit/: test_bigint_basic.cpp  test_bigint_bitops_fuzz.cpp  test_bigint_ops.cpp  test_limb_basic.cpp  test_limb_float_hash.cpp  test_limb_properties.cpp  test_main.cpp  test_montgomery.cpp  test_numeric_types.cpp
