[build-system]
requires = [
    "setuptools>=68.0",
    "wheel",
    "cmake>=3.16",
    "pybind11>=2.12",
]
build-backend = "setuptools.build_meta"

[project]
name = "t81lib"
version = "0.1.0"
description = "Balanced ternary arithmetic primitives for AI research"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "The t81lib Contributors", email = "t81lib@example.com" },
]
dependencies = [
    "numpy>=1.25",
    "matplotlib>=3.7",
]

[project.urls]
Homepage = "https://github.com/t81dev/t81lib"

[project.optional-dependencies]
torch = [
    "torch>=2.0",
    "transformers>=4.34",
    "safetensors>=0.3",
    "accelerate>=0.20",
    "datasets>=2.13",
]
dev = ["pytest", "pybind11>=2.12", "cibuildwheel>=2.15"]

[project.scripts]
t81-convert = "t81.convert:main"
t81-qat = "t81.scripts.t81_qat:main"
t81-gguf = "t81.scripts.t81_gguf:main"
